maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: not found: value x
		if(!aMurSud(posX,posY)&&(getIndication(x,y+1)==9999)){
                                                       ^JediEscaper:18: error: not found: value x
		else if(!aMurNord(posX,posY)&&(getIndication(x,y-1)==9999)){
                                                             ^JediEscaper:21: error: not found: value x
		else if(!aMurEst(posX,posY)&&(getIndication(x+1,y)==9999)){
                                                            ^JediEscaper:24: error: not found: value x
		else if(!aMurOuest(posX,posY)&&(getIndication(x-1,y)==9999)){
                                                              ^